fix(client): scroll visible in mobile devices

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -57,5 +57,10 @@ button:focus-visible {
     height: 100vh;
     width: 100dvw;
     height: 100dvh;
+    position: fixed;
+    left: 0;
+    top: 0;
+    overflow: hidden;
+    z-index: 9999;
   }
 }
